@@ -2,6 +2,7 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
   - Switch to https instead of http
+  - Mark distribution as deprecated.
 
 0.06      2019-07-01 19:45:44 -0400
   - Update to download tarball for most recent version
